# edhoc-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
consts/src/: lib.rs
crypto/: Cargo.toml
crypto/edhoc-crypto-cryptocell310-sys/src/: lib.rs
crypto/lakers-crypto-cryptocell310-sys/: Cargo.toml
crypto/lakers-crypto-cryptocell310-sys/src/: lib.rs
crypto/src/: lib.rs
ead/: Cargo.toml
examples/: bench_mem.py
examples/c-wrapper-riot/: main.c
examples/coap/: Cargo.toml
examples/edhoc-rs-no_std/.cargo/: config.toml
examples/edhoc-rs-no_std/src/: main.rs
examples/lakers-no_std/: Cargo.toml  measure_stack.sh  mem_paint.sh  memory.x
examples/lakers-no_std/.cargo/: config.toml
examples/lakers-no_std/src/: main.rs
hacspec/src/: lib.rs
lakers-c/: Cargo.toml
lakers-python/src/ead_authz/: authenticator.rs
lakers-python/test/: test_ead_authz.py  test_lakers.py
lib/: Cargo.toml  cbindgen.toml
lib/src/: edhoc.rs  lib.rs
shared/src/: lib.rs
