[package]
name = "edhoc-rs"
version = "0.1.0"
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license = "BSD"
description = "EDHOC implementation in Rust"

[dependencies]
hexlit = "0.5.3"
hex = { version = "0.4.3", default-features = false }

edhoc-hacspec = { path = "../hacspec", optional = true }
hacspec-lib = { version = "0.1.0-beta.1", default-features = false, optional = true }
edhoc-crypto = { path = "../crypto", default-features = false }
edhoc-consts = { path = "../consts", default-features = false }
edhoc-ead = { path = "../ead", default-features = false }

[features]
default = [ "edhoc-ead/ead-none" ]
hacspec-hacspec = ["hacspec-lib/std", "edhoc-hacspec", "edhoc-crypto/hacspec", "edhoc-consts/hacspec" ]
hacspec-cc2538 = ["hacspec-lib/alloc", "edhoc-hacspec", "edhoc-crypto/cc2538", "edhoc-consts/hacspec" ] # FIXME: stubs
hacspec-psa = ["hacspec-lib/alloc", "edhoc-hacspec", "edhoc-crypto/psa", "edhoc-consts/hacspec" ]
hacspec-psa-baremetal = ["hacspec-psa", "edhoc-crypto/psa-baremetal", "edhoc-consts/hacspec" ]
hacspec-cryptocell310 = ["hacspec-lib/alloc", "edhoc-hacspec", "edhoc-crypto/cryptocell310", "edhoc-consts/hacspec" ]
rust-psa = [ "edhoc-consts/rust", "edhoc-crypto/psa-rust" ]
rust-psa-baremetal = [ "edhoc-crypto/psa-rust-baremetal", "edhoc-consts/rust" ]
rust-cryptocell310 = [ "edhoc-consts/rust", "edhoc-crypto/cryptocell310-rust" ]
ead-none = [ "edhoc-ead/ead-none" ]
ead-zeroconf = [ "edhoc-ead/ead-zeroconf" ]

# # AIO DotBot hackaton, June 2, 2023
# The following configuration is used to build a static library that can be linked with C code, specifically the DotBot firmware.
# In the context of the hackathon, the build was tested on a nrf52840dk board.
# To generate the static library, run the following command:
# - cargo build --target thumbv7em-none-eabihf --package edhoc-rs --package edhoc-crypto --package edhoc-ead  --features="rust-cryptocell310" --release
# It can then be linked with the DotBot firmware by:
# - cp target/thumbv7em-none-eabihf/release/libedhoc_rs.a <path to DotBot firmware>/projects/03app_dotbot_gateway/
# - in Segger Embedded Studio, go to Options -> Linker -> Additional Input Files and add libedhoc_rs.a
[lib]
name = "edhoc_rs" # name of the static library
crate-type = ["staticlib"] # type of the library, in this case a static library
